# shoppal_pcs_schema

./: .gitignore  .pre-commit-config.yaml  README.md  favie_product.py  pyproject.toml  test.sh
.github/: lint.yml
.github/workflows/: avro_to_pydantic.yml  lint.yml  python-code-quality.yml
avsc/: CrawlerResult.avsc  RainforestProductDetail.avsc  SerpApiResult.avsc  amazon_product_detail.avsc  crawler_result.avsc  product.avsc  quora_post.avsc  rainforest_product_detail.avsc  rainforest_product_review.avsc  reddit_post.avsc  review.avsc  serpapi_result.avsc  serper_api_result.avsc  serper_dev_result.avsc
data/example/: amazon_item_spider_example.json  (+5 more)
favie_api_schema/: README.md  pyproject.toml
favie_api_schema/.github/workflows/: python-code-quality.yml
favie_api_schema/favie_api_schema/: __init__.py
favie_api_schema/favie_api_schema/schemas/: __init__.py  common.py  common_search_result.py  favicon.py  manage.py  middle_step.py  product_detail.py  product_search_result.py  question_recommend_schema.py  search_request.py  srag_common.py  video_detail.py
favie_api_schema/favie_api_schema/schemas/account/: user.py
favie_api_schema/favie_api_schema/utils/: log_util.py
favie_api_schema/feed/: post.py
favie_api_schema/srag/: master_product.py  response.py  reviews.py
favie_api_schema/tests/: log_util_test.py
favie_data_schema/: __init__.py
feed/: post.py
shoppal_pcs_schema/: __init__.py  common.py  common_search_result.py  video_detail.py
srag/: __init__.py  master_product.py  response.py  reviews.py
tests/: __init__.py  log_util_test.py
(+89 files in other folders)
