[tool.poetry]
name = "shoppal-pcs-schema"
version = "0.1.57"
description = ""
authors = ["hezhe <hezhe@shoppal.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"

# 指定要包含的包
[tool.poetry.packages]  
include = ["shoppal_pcs_schema", "favie_pcs_schema"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"