[tool.poetry]
name = "favie_api_schema"
version = "0.1.63"
description = ""
authors = ["tim <tim@srp.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
